--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,11 +6,9 @@ build-backend = "poetry.core.masonry.api"
 name = "pymp4"
 version = "1.4.0"
 description = "Python parser for MP4 boxes"
-authors = ["beardypig <git@beardypig.com>"]
+authors = ["ktp420"]
 license = "Apache-2.0"
 readme = "README.md"
-homepage = "https://github.com/beardypig/pymp4"
-repository = "https://github.com/beardypig/pymp4"
 classifiers = [
     "Development Status :: 4 - Beta",
     "Environment :: Console",
@@ -21,15 +19,16 @@ classifiers = [
     "Topic :: Multimedia :: Video",
     "Topic :: Utilities",
 ]
+packages = [{include = "pymp4", from='src'}]
 
 [tool.poetry.dependencies]
-python = ">=3.7,<4.0"
-construct = "^2.10.70"
+python = ">=3.8,<4.0"
+construct = "2.10.70"
 
 [tool.poetry.group.dev.dependencies]
 coverage = { version="^7.2.3", extras=["toml"] }
-pytest = "^7.2.2"
-pytest-cov = "^4.0.0"
+pytest = "^7.4.3"
+pytest-cov = "^4.1.0"
 
 [tool.poetry.scripts]
 mp4dump = "pymp4.cli:dump"
